Grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
       app: grafana
  strategy: {}
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana
        name: grafana
        resources: {}
      imagePullSecrets:
      - name: dockerhub
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      #nodePort: 30000
status:
  loadBalancer: {}
