Grafana/grafana-srv.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      #nodePort: 30000
status:
  loadBalancer: {}
